@@ -11,5 +11,6 @@ dist
 .bzr
 *.backup
 .prakasha-ssh
-MSG
+BZR_MSG
+GIT_MSG
 .venv
